Closed Bug 770864 Opened 13 years ago Closed 13 years ago

NPAPI stream destroyed with reason NPRES_NETWORK_ERR when the user leaved the page.

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla20

People

(Reporter: mmakrai, Assigned: gfritzsche)

Details

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/536.11 (KHTML, like Gecko) Chrome/20.0.1132.47 Safari/536.11 Steps to reproduce: I opened a page that contains my NPAPI plugin and I did not wait for receiving the stream but I navigated to the previous page or pressed the stop button. Actual results: The NPP_DestroyStream function was called with reason NPRES_NETWORK_ERR. Expected results: I think the NPP_DestroyStream function should be called with reason NPRES_USER_BREAK in this case.
OS: Windows 7 → All
Hardware: x86_64 → All
I am working on it.
Attached patch fix v1.0 (obsolete) — Splinter Review
This is the patch proposed to me in an email from the reporter. Seems fine at a glance. If anything I'd just be worried about backwards compatibility, but that probably isn't an issue.
Attachment #643078 - Flags: review?(georg.fritzsche)
Component: Untriaged → Plug-ins
Product: Firefox → Core
Version: 16 Branch → Trunk
Sorry for the delay, will be looking into this tomorrow.
Comment on attachment 643078 [details] [diff] [review] fix v1.0 Review of attachment 643078 [details] [diff] [review]: ----------------------------------------------------------------- Looks good to me. Also tested and confirmed the mentioned use cases with the Adobe PDF and test plugin.
Attachment #643078 - Flags: review?(georg.fritzsche) → review+
Status: UNCONFIRMED → NEW
Ever confirmed: true
Did this need anything else done or did it just slip through the cracks?
No owner, got lost. Hot potato!
Assignee: nobody → georg.fritzsche
Attached patch FixSplinter Review
Attachment #643078 - Attachment is obsolete: true
Attachment #686047 - Flags: review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: