Bug 770864 - NPAPI stream destroyed with reason NPRES_NETWORK_ERR when the user leaves the page. r=gfritzsche